--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yesenia Oruna Graos
-logo: /assets/img/foto cara.png
+logo: /assets/img/foto cara.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
