--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yesenia Oruna Graos
-logo: foto cara.jpg
+logo: logo.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
