--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yesenia Oruna Graos
-logo: /assets/img/logo.JPG
+logo: /images/logo.jpg
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal 
