--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Yesenia Oruna Graos
+title: Yesenia Oruna
 logo: images/logo.jpg
-#description: text below image
+
 show_downloads: false
 theme: jekyll-theme-minimal 
